components/todo-app/base/todo-backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: ghcr.io/chrishrb/ghcr.io/chrishrb/todo-backend:main-521f77f
        name: backend
        ports:
        - containerPort: 3000
