components/todo-app/base/todo-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/chrishrb/ghcr.io/chrishrb/todo-frontend:main-1f93296
        name: frontend
        ports:
        - containerPort: 80
