components/todo-app/base/postgres-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: pgsql
      port: 5432
      targetPort: 5432
